0.003 ???
    - Add support for ChromDriver.
    - Document how to use different backends.

0.002 2015-07-05
    - $drv->() caches the closure and is now twice as fast.
    - $drv->base_url('foo'), and $drv->window_maximize now return $self.

0.001 2015-06-09
    - Initial release.