@@ -5,7 +5,7 @@ use t scalar(
         back
         base_url
         close_page
-        delete_cookie
+        cookie_delete
         dismiss_alert
         forward
         get
@@ -13,11 +13,11 @@ use t scalar(
         switch_page
         window_maximize
     /
-) + 2;
+) + 3;
 
 my $drv = WebDriver::Tiny->new( port => 1 );
 
 is $drv->$_('foo'), $drv, "->$_ should return \$self" for @::methods;
 
 is $drv->$_( 1, 1 ), $drv, "->$_ should return \$self"
-    for qw/window_position window_size/;
+    for qw/cookie window_position window_size/;
