@@ -1,6 +1,8 @@
 0.003 ???
     - Add support for ChromDriver.
     - Document how to use different backends.
+    - Add cookie getter/setter.
+    - Rename delete_cookie to cookie_delete.
 
 0.002 2015-07-05
     - $drv->() caches the closure and is now twice as fast.
